crates/ars-components/src/utility/focus_scope/snapshots/ars_components__utility__focus_scope__tests__container_attrs_active_trapped.snap
---
source: crates/ars-components/src/utility/focus_scope/mod.rs
assertion_line: 1248
expression: "snapshot_attrs(&service.connect(&|_| {}).container_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-active",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "container",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "focus-scope",
            ),
        ),
        (
            Data(
                "ars-trapped",
            ),
            Bool(
                true,
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
