crates/ars-components/src/utility/focus_scope/snapshots/ars_components__utility__focus_scope__tests__container_attrs_inactive.snap
---
source: crates/ars-components/src/utility/focus_scope/mod.rs
assertion_line: 1220
expression: "snapshot_attrs(&service.connect(&|_| {}).container_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "container",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "focus-scope",
            ),
        ),
    ],
    styles: [],
}
